cabal-version:      3.0

name:               zkfold-cardano
version:            0.1.0.0
category:           Testing, Cryptography, Math, Symbolic Computation
author:             Vladimir Sinyakov, Ilya Baryshnikov
maintainer:         info@zkfold.io
license:            MIT
build-type:         Simple

common lang
  default-language: Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ImportQualifiedPost
    LambdaCase
    NumericUnderscores
    GeneralizedNewtypeDeriving
    StandaloneDeriving
    ViewPatterns
    AllowAmbiguousTypes
    FlexibleContexts
    RankNTypes
    TypeApplications
    DataKinds
    InstanceSigs
    MultiParamTypeClasses
    RecordWildCards
    ScopedTypeVariables
    FlexibleInstances
    NoImplicitPrelude
  ghc-options:
    -Wall
    -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Widentities
    -- -Wunused-packages
    -Wmissing-deriving-strategies

common lang-extra
  ghc-options:
    -fobject-code
    -fno-specialise
    -fno-spec-constr
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fno-strictness
    -fno-unbox-strict-fields 
    -fno-unbox-small-strict-fields
    -fno-full-laziness
    -fexpose-all-unfoldings
    -- Comment the following line to enable PlutusTx error messages
    -- By default, we defer the errors as they mess with the HLS
    -fplugin-opt PlutusTx.Plugin:defer-errors

library
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  exposed-modules:
    ZkFold.Cardano.Examples.EqualityCheck
    ZkFold.Cardano.Scripts.ForwardingScripts
    ZkFold.Cardano.Scripts.PlonkVerifier
    ZkFold.Cardano.Scripts.SymbolicVerifier
    ZkFold.Cardano.Plonk
    ZkFold.Cardano.Plonk.OnChain
    ZkFold.Cardano.Plonk.OnChain.BLS12_381.F
    ZkFold.Cardano.Plonk.OnChain.BLS12_381.G1
    ZkFold.Cardano.Plonk.OnChain.BLS12_381.G2
    ZkFold.Cardano.Plonk.OnChain.Data
    ZkFold.Cardano.Plonk.OnChain.Utils
    ZkFold.Cardano.Plonk.OffChain
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    containers                     ,
    plutus-ledger-api       ^>=1.27,
    plutus-tx               ^>=1.27,
    plutus-tx-plugin        ^>=1.27,
    vector                         ,
    zkfold-base                    ,
  hs-source-dirs:   src

test-suite test
  import:           lang
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  ghc-options:      -rtsopts
  main-is:          Main.hs
  other-modules:
    Tests.Data
    Tests.Verifier
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    containers                     ,
    plutus-ledger-api       ^>=1.27,
    plutus-tx               ^>=1.27,
    plutus-tx-plugin        ^>=1.27,
    hspec                          ,
    tasty                          ,
    tasty-expected-failure         ,
    tasty-hunit                    ,
    tasty-quickcheck               ,
    text                           ,
    QuickCheck                     ,
    zkfold-base                    ,
    zkfold-cardano                 ,
  hs-source-dirs:   test

executable bench-uplc
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   benchs/bench-uplc
  other-modules:    Bench.Scripts
  build-depends:
    aeson                          ,
    aeson-pretty                   ,
    base              >= 4.9 && < 5,
    base16-bytestring              ,
    bytestring                     ,
    cardano-api                    ,
    cardano-binary                 ,
    containers                     ,
    serialise                      ,
    flat                           ,
    plutus-core             ^>=1.27,
    plutus-ledger-api       ^>=1.27,
    plutus-tx               ^>=1.27,
    plutus-tx-plugin        ^>=1.27,
    zkfold-base                    ,
    zkfold-cardano                 ,

executable bench-cpu-mem
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   benchs/bench-cpu-mem
  other-modules:
    Bench.Statistics
    Bench.Scripts
  build-depends:
    aeson                          ,
    base                >=4.9 && <5,
    bytestring                     ,
    containers                     ,
    flat                           ,
    plutus-core             ^>=1.27,
    plutus-ledger-api       ^>=1.27,
    plutus-tx               ^>=1.27,
    plutus-tx-plugin        ^>=1.27,
    zkfold-base                    ,
    zkfold-cardano                 ,

executable symbolic-init-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  other-modules:    Scripts
  hs-source-dirs:   backends/symbolic/symbolic-init-transaction
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    base16-bytestring              ,
    bytestring                     ,
    cardano-api                    ,
    cardano-binary                 ,
    containers                     ,
    serialise                      ,
    plutus-core             ^>=1.27,
    plutus-ledger-api       ^>=1.27,
    plutus-tx               ^>=1.27,
    plutus-tx-plugin        ^>=1.27,
    zkfold-base                    ,
    zkfold-cardano                 ,

executable symbolic-transfer-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   backends/symbolic/symbolic-transfer-transaction
  build-depends:
    aeson                          ,
    aeson-pretty                   ,
    base              >= 4.9 && < 5,
    base16-bytestring              ,
    bytestring                     ,
    cardano-api                    ,
    cardano-binary                 ,
    cardano-cli                    ,
    cardano-crypto-class           ,
    containers                     ,
    serialise                      ,
    transformers                   ,
    transformers-except            ,
    text                           ,
    optparse-applicative-fork      ,
    flat                           ,
    parsec                         ,
    plutus-core             ^>=1.27,
    plutus-ledger-api       ^>=1.27,
    plutus-tx               ^>=1.27,
    plutus-tx-plugin        ^>=1.27,
    zkfold-base                    ,
    zkfold-cardano                 ,

executable symbolic-withdraw-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   backends/symbolic/symbolic-withdraw-transaction
  build-depends:
    aeson                          ,
    aeson-pretty                   ,
    base              >= 4.9 && < 5,
    base16-bytestring              ,
    bytestring                     ,
    cardano-api                    ,
    cardano-binary                 ,
    cardano-cli                    ,
    cardano-crypto-class           ,
    containers                     ,
    serialise                      ,
    transformers                   ,
    transformers-except            ,
    text                           ,
    optparse-applicative-fork      ,
    flat                           ,
    plutus-core             ^>=1.27,
    plutus-ledger-api       ^>=1.27,
    plutus-tx               ^>=1.27,
    plutus-tx-plugin        ^>=1.27,
    zkfold-base                    ,
    zkfold-cardano                 ,

executable plonk-init-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  other-modules:    Scripts
  hs-source-dirs:   backends/plonk/plonk-init-transaction
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    base16-bytestring              ,
    bytestring                     ,
    cardano-api                    ,
    cardano-binary                 ,
    containers                     ,
    serialise                      ,
    plutus-core             ^>=1.27,
    plutus-ledger-api       ^>=1.27,
    plutus-tx               ^>=1.27,
    plutus-tx-plugin        ^>=1.27,
    zkfold-base                    ,
    zkfold-cardano                 ,

executable plonk-transfer-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   backends/plonk/plonk-transfer-transaction
  build-depends:
    aeson                          ,
    aeson-pretty                   ,
    base              >= 4.9 && < 5,
    base16-bytestring              ,
    bytestring                     ,
    cardano-api                    ,
    cardano-binary                 ,
    cardano-cli                    ,
    cardano-crypto-class           ,
    containers                     ,
    serialise                      ,
    transformers                   ,
    transformers-except            ,
    text                           ,
    optparse-applicative-fork      ,
    flat                           ,
    parsec                         ,
    plutus-core             ^>=1.27,
    plutus-ledger-api       ^>=1.27,
    plutus-tx               ^>=1.27,
    plutus-tx-plugin        ^>=1.27,
    zkfold-base                    ,
    zkfold-cardano                 ,

executable plonk-minting-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   backends/plonk/plonk-minting-transaction
  build-depends:
    aeson                          ,
    aeson-pretty                   ,
    base              >= 4.9 && < 5,
    base16-bytestring              ,
    bytestring                     ,
    cardano-api                    ,
    cardano-binary                 ,
    cardano-cli                    ,
    cardano-crypto-class           ,
    containers                     ,
    serialise                      ,
    transformers                   ,
    transformers-except            ,
    text                           ,
    optparse-applicative-fork      ,
    flat                           ,
    plutus-core             ^>=1.27,
    plutus-ledger-api       ^>=1.27,
    plutus-tx               ^>=1.27,
    plutus-tx-plugin        ^>=1.27,
    zkfold-base                    ,
    zkfold-cardano                 ,
