cabal-version:      3.0

name:               zkfold-backends
version:            0.1.0.0
category:           Testing, Cryptography, Math, Symbolic Computation
author:             Vladimir Sinyakov, Ilya Baryshnikov, Antonio Hernandez
maintainer:         info@zkfold.io
license:            MIT
build-type:         Simple

common lang
  default-language: Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ImportQualifiedPost
    LambdaCase
    NumericUnderscores
    GeneralizedNewtypeDeriving
    StandaloneDeriving
    ViewPatterns
    AllowAmbiguousTypes
    FlexibleContexts
    RankNTypes
    TypeApplications
    DataKinds
    InstanceSigs
    MultiParamTypeClasses
    RecordWildCards
    ScopedTypeVariables
    FlexibleInstances
    NoImplicitPrelude
    OverloadedStrings
  ghc-options:
    -Wall
    -Wnoncanonical-monad-instances
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wredundant-constraints
    -Widentities
    -- -Wunused-packages
    -Wmissing-deriving-strategies

common lang-extra
  ghc-options:
    -fobject-code
    -fno-specialise
    -fno-spec-constr
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -fno-strictness
    -fno-unbox-strict-fields 
    -fno-unbox-small-strict-fields
    -fno-full-laziness
    -fexpose-all-unfoldings
    -- Comment the following line to enable PlutusTx error messages
    -- By default, we defer the errors as they mess with the HLS
    -fplugin-opt PlutusTx.Plugin:defer-errors

executable symbolic-init-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   symbolic/symbolic-init-transaction
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    directory                      ,
    zkfold-cardano                 ,
    QuickCheck                     ,
    zkfold-example                 ,
    zkfold-contracts               ,

executable symbolic-transfer-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   symbolic/symbolic-transfer-transaction
  build-depends:
    base              >= 4.9 && < 5,
    bytestring                     ,
    cardano-api                    ,
    cborg                          ,
    parsec                         ,

executable symbolic-withdraw-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   symbolic/symbolic-withdraw-transaction
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    cardano-api                    ,
    zkfold-cardano                 ,
    zkfold-example                 ,

executable plonk-init-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   plonk/plonk-init-transaction
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    directory                      ,
    zkfold-cardano                 ,
    zkfold-example                 ,
    zkfold-contracts               ,
    QuickCheck                     ,

executable plonk-transfer-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   plonk/plonk-transfer-transaction
  build-depends:
    base              >= 4.9 && < 5,
    bytestring                     ,
    cardano-api                    ,
    cborg                          ,
    parsec                         ,

executable plonk-minting-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   plonk/plonk-minting-transaction
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    cardano-api                    ,
    plutus-ledger-api       ^>=1.36,
    zkfold-cardano                 ,
    zkfold-example                 ,

executable balancing-init-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   symbolic-balancing/balancing-init-transaction
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    directory                      ,
    filepath                       ,
    zkfold-cardano                 ,
    zkfold-example                 ,
    zkfold-contracts               ,
    QuickCheck                     ,

executable balancing-parse-input
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   symbolic-balancing/balancing-parse-input
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    cardano-api                    ,
    directory                      ,
    filepath                       ,
    plutus-ledger-api       ^>=1.36,
    plutus-tx               ^>=1.36,
    zkfold-cardano                 ,
    zkfold-example                 ,
    zkfold-contracts               ,

executable rollup-init-transaction
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   rollup/rollup-init-transaction
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    cardano-api                    ,
    directory                      ,
    filepath                       ,
    plutus-ledger-api       ^>=1.36,
    plutus-tx               ^>=1.36,
    random                         ,
    zkfold-cardano                 ,
    zkfold-example                 ,
    zkfold-contracts               ,
    QuickCheck

executable rollup-update-loop
  import:           lang
  import:           lang-extra
  default-language: Haskell2010
  ghc-options:      -rtsopts
  main-is:          Main.hs
  hs-source-dirs:   rollup/rollup-update-loop
  build-depends:
    aeson                          ,
    base              >= 4.9 && < 5,
    bytestring                     ,
    cardano-api                    ,
    directory                      ,
    filepath                       ,
    plutus-ledger-api       ^>=1.36,
    symbolic-base                  ,
    zkfold-cardano                 ,
    zkfold-example                 ,
    zkfold-contracts               ,
    QuickCheck
